<resources>
    <string name="app_name">laser</string>
    <string name="tab_produit_title">Produits</string>
    <string name="tab_produit">Produit</string>
    <string name="hint_produit">produit</string>
    <string name="tab_colori_title">Coloris</string>
    <string name="tab_colori">Colori</string>
    <string name="hint_colori">colori</string>
    <string name="tab_taille_title">Tailles</string>
    <string name="tab_taille">Taille</string>
    <string name="hint_taille">taille</string>
    <string name="tab_placelogo_title">Places Logo</string>
    <string name="tab_placelogo">Place logo</string>
    <string name="hint_placelogo">place logo</string>
    <string name="tab_article_title">Articles</string>
    <string name="tab_article">Article</string>
    <string name="hint_article">article</string>
    <string name="tab_quantiteproduit_title">Nb articles</string>
    <string name="tab_quantiteproduit">Nb articles</string>
    <string name="hint_quantiteproduit_ref">Référence</string>
    <string name="hint_quantiteproduit_nb">Nombre articles</string>
    <string name="tab_achatproduits_title">Achats</string>
    <string name="tab_venteproduits_title">Ventes</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Empty %s not saved because it is empty.</string>
    <string name="hint_prix_uht">prix unitaire HT</string>
    <string name="splash_app_name">Laser</string>
    <string name="splash_designed">Designed by Remi Lapointe</string>
    <string name="button_achat">Achat article</string>
    <string name="button_commande">Commande client</string>
    <string name="button_configuration">Configuration articles</string>
    <string name="nb_articles">Nombre d\'articles</string>
    <string name="achat_articles_title">Achat d\'articles</string>
    <string name="hint_achat_nb">Nb d\'articles achetés</string>
    <string name="prix_achat_ht">Prix d\'achat HT</string>
    <string name="hint_prix_achat_ht">Prix achat HT</string>
    <string name="tva_achat">TVA</string>
    <string name="hint_tva_achat">TVA</string>
    <string name="hint_remise_achat">Remise</string>
    <string name="remise_achat">Remise</string>
    <string name="date_achat">Date d\'achat</string>
    <string name="ref_article">Référence article</string>
    <string name="unable_to_find_article">Impossible de trouver l\'article %1$s</string>
    <string name="all_fields_must_be_filled">All fields must be filled</string>
    <string name="unite_achat_prix_ht">€ HT</string>
    <string name="unite_achat_tva">%</string>
    <string name="unite_achat_remise">€ HT</string>
    <string name="aucun_article_configure">Aucun article défini, aller dans configuration pour en ajouter</string>
    <string name="aucun_produit_configure">Aucun produit n\'est défini</string>
    <string name="aucun_colori_configure">Aucun colori n\'est défini</string>
    <string name="aucune_taille_configuree">Aucune taille n\'est définie</string>
    <string name="aucun_placelogo_configure">Aucun emplacement de logo n\'est défini</string>
    <string name="article_non_cree">Article non créé</string>
    <string name="directly_goto_config">Voulez-vous aller dans la configuration ?</string>
    <string name="bt_add_all_articles">Créer tous les articles possibles</string>
</resources>
