<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tvAchatTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_padding"
            android:text="@string/achat_articles_title"
            android:textAlignment="center"
            android:textColor="#FF9800"
            android:textSize="24sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    <TextView
            android:id="@+id/tvAchatArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ref_article"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spAchatArticle"
            app:layout_constraintBottom_toBottomOf="@+id/spAchatArticle"
            />

    <Spinner
            android:id="@+id/spAchatArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:padding="@dimen/small_padding"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/tvAchatArticle"
            app:layout_constraintTop_toBottomOf="@id/tvAchatTitle" />

    <TextView
            android:id="@+id/tvAchatNb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nb_articles"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvAchatArticle"
            app:layout_constraintTop_toTopOf="@+id/edAchatNb"
            app:layout_constraintBottom_toBottomOf="@+id/edAchatNb"
            />

    <EditText
            android:id="@+id/edAchatNb"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/hint_achat_nb"
            android:inputType="number"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@+id/spAchatArticle"
            app:layout_constraintTop_toBottomOf="@+id/spAchatArticle" />

    <TextView
            android:id="@+id/tvAchatPrixHT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prix_achat_ht"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edAchatPrixHT"
            app:layout_constraintBottom_toBottomOf="@+id/edAchatPrixHT"
            />

    <EditText
            android:id="@+id/edAchatPrixHT"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/hint_prix_achat_ht"
            android:inputType="numberDecimal"
            app:layout_constraintLeft_toLeftOf="@+id/spAchatArticle"
            app:layout_constraintTop_toBottomOf="@+id/edAchatNb"
            />

    <TextView
            android:id="@+id/tvAchatPrixUnite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unite_achat_prix_ht"
            app:layout_constraintLeft_toRightOf="@+id/edAchatPrixHT"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/tvAchatPrixHT"
            />

    <TextView
            android:id="@+id/tvAchatTVA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tva_achat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edAchatTVA"
            app:layout_constraintBottom_toBottomOf="@+id/edAchatTVA"
            />

    <EditText
            android:id="@+id/edAchatTVA"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/hint_tva_achat"
            android:inputType="numberDecimal"
            app:layout_constraintLeft_toLeftOf="@+id/spAchatArticle"
            app:layout_constraintTop_toBottomOf="@+id/edAchatPrixHT" />

    <TextView
            android:id="@+id/tvAchatTVAUnite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unite_achat_tva"
            app:layout_constraintLeft_toRightOf="@+id/edAchatTVA"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/tvAchatTVA"
            />

    <TextView
            android:id="@+id/tvAchatRemise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remise_achat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edAchatRemise"
            app:layout_constraintBottom_toBottomOf="@+id/edAchatRemise"
            />

    <EditText
            android:id="@+id/edAchatRemise"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/hint_remise_achat"
            android:inputType="numberDecimal"
            app:layout_constraintLeft_toLeftOf="@+id/spAchatArticle"
            app:layout_constraintTop_toBottomOf="@+id/edAchatTVA" />

    <TextView
            android:id="@+id/tvAchatRemiseUnite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unite_achat_remise"
            app:layout_constraintLeft_toRightOf="@+id/edAchatRemise"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/tvAchatRemise"
            />

    <TextView
            android:id="@+id/tvAchatDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_achat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dpAchatDate"
            app:layout_constraintBottom_toBottomOf="@+id/dpAchatDate"
            />

    <DatePicker
            android:id="@+id/dpAchatDate"
            style="@android:style/Widget.DatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:fitsSystemWindows="true"
            app:layout_constraintLeft_toLeftOf="@+id/spAchatArticle"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/edAchatRemise"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/dpAchatDate"
            >
        <Button
                android:id="@+id/bt_achat_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/ok"
                />

        <Button
                android:id="@+id/bt_achat_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:text="@android:string/cancel"
                />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
